--- a/proyectopoeta2/templates/prestamos/prestamo_form.html
+++ b/proyectopoeta2/templates/prestamos/prestamo_form.html
@@ -1,11 +1,11 @@
 {% extends 'base_generic.html' %}
 
 {% block content %}
-  <h1>{% if not libro.pk %}Nuevo{% else %}Editar{% endif %} Libro</h1>
+  <h1>{% if not prestamo.pk %}Nuevo{% else %}Editar{% endif %} Préstamo</h1>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Guardar</button>
   </form>
-  <a href="{% url 'libro_list' %}">Volver al listado</a>
+  <a href="{% url 'prestamo_list' %}">Volver al listado</a>
 {% endblock %}
