--- a/proyectopoeta2/templates/base_generic.html
+++ b/proyectopoeta2/templates/base_generic.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="{% url 'listar_clientes' %}">Clientes</a></li>
         <li><a href="{% url 'listar_libros' %}">Libros</a></li>
-        <li><a href="{% url 'prestamo_list' %}">Préstamos</a></li>
+        <li><a href="{% url 'listar_prestamos' %}">Préstamos</a></li>
     </ul>
 </nav>
 
