--- a/proyectopoeta2/templates/prestamos/prestamo_list.html
+++ b/proyectopoeta2/templates/prestamos/prestamo_list.html
@@ -1,11 +1,27 @@
 {% extends 'base_generic.html' %}
 
+{% block title %}Listado de Préstamos{% endblock %}
+
 {% block content %}
   <h1>Listado de Préstamos</h1>
+
   <ul>
-    {% for prestamo in object_list %}
-      <li>{{ prestamo.id }} - {{ prestamo.libro.titulo }} - {{ prestamo.cliente.nombre }} - {{ prestamo.estado_devolucion }}</li>
+    {% for prestamo in prestamos %}
+      <li class="prestamo-item">
+        <div class="prestamo-info">
+          <strong>Libro:</strong> {{ prestamo.libro.titulo }}<br>
+          <strong>Cliente:</strong> {{ prestamo.cliente.nombre }}<br>
+          <strong>Fecha Préstamo:</strong> {{ prestamo.fecha_prestamo }}<br>
+          <strong>Fecha Devolución:</strong> {{ prestamo.fecha_devolucion }}
+        </div>
+        <div class="prestamo-actions">
+          <a href="{% url 'detalle_prestamo' prestamo.id %}">(Detalles)</a>
+          <a href="{% url 'modificar_prestamo' prestamo.id %}">(Editar)</a>
+          <a href="{% url 'eliminar_prestamo' prestamo.id %}">(Eliminar)</a>
+        </div>
+      </li>
     {% endfor %}
   </ul>
-  <a href="{% url 'prestamo_create' %}">Agregar préstamo</a>
+
+  <a href="{% url 'agregar_prestamo' %}">Agregar Préstamo</a>
 {% endblock %}
