--- a/proyectopoeta2/templates/prestamos/prestamo_create.html
+++ b/proyectopoeta2/templates/prestamos/prestamo_create.html
@@ -3,6 +3,10 @@
 {% block content %}
     <h1>Agregar Prestamo</h1>
 
+    {% if mensaje_error %}
+        <p style="color: red;">{{ mensaje_error }}</p>
+    {% endif %}
+
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
