--- a/proyectopoeta2/templates/base_generic.html
+++ b/proyectopoeta2/templates/base_generic.html
@@ -13,6 +13,7 @@
         <li><a href="{% url 'listar_clientes' %}">Clientes</a></li>
         <li><a href="{% url 'listar_libros' %}">Libros</a></li>
         <li><a href="{% url 'listar_prestamos' %}">Préstamos</a></li>
+        <li><a href="{% url 'admin:index' %}">Admin</a></li>
     </ul>
 </nav>
 
