--- a/proyectopoeta2/templates/base_generic.html
+++ b/proyectopoeta2/templates/base_generic.html
@@ -48,6 +48,7 @@
 </head>
 <body>
 
+
 <nav>
     <div class="nav-wrapper">
         <a href="#" class="brand-logo">The Big Poet</a>
@@ -63,6 +64,13 @@
 <div class="container">
     {% block content %}{% endblock %}
 </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var elems = document.querySelectorAll('select');
+            var instances = M.FormSelect.init(elems);
+        });
+    </script>
 
 </body>
 </html>
