--- a/proyectopoeta2/templates/biblioteca/libro_create.html
+++ b/proyectopoeta2/templates/biblioteca/libro_create.html
@@ -7,7 +7,7 @@
         {% csrf_token %}
         {{ form.as_p }}
 
-        <input type="submit" value="Guardar">
+        <input class="btn" type="submit" value="Guardar">
     </form>
 
     <a href="{% url 'listar_libros' %}">Volver al listado</a>
