--- a/proyectopoeta2/templates/clientes/modificar_cliente.html
+++ b/proyectopoeta2/templates/clientes/modificar_cliente.html
@@ -7,7 +7,7 @@
         {% csrf_token %}
         {{ form.as_p }}
 
-        <input type="submit" value="Guardar">
+        <input type="submit" class="btn" value="Guardar">
     </form>
 
     <a href="{% url 'listar_clientes' %}">Volver al listado</a>
